[project]
name = "nhs-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plotly>=6.6.0",
    "requests>=2.31.0",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "watchdog>=6.0.0",
]
